# v8-builder

./: CLAUDE.md  VERSION  archive.bat  archive.sh  v8_compile.bat  v8_compile.sh  v8_deconflict.bat  v8_deconflict.sh  v8_test.sh
.github/actions/build-linux/: action.yml
.github/actions/build-macos/: action.yml
.github/actions/build-windows/: action.yml
.github/workflows/: v8-build-test.yml  v8-release.yml
.github/workflows/scripts/: archive-name.ps1  archive-name.sh
args/: Linux.gn  Windows.gn  macOS.gn
scripts/: get_arch.bat  get_arch.sh
