is_debug=false
is_component_build=false
v8_monolithic=true

# Use system clang instead of Chromium's bundled clang toolchain.
# clang_base_path and clang_version are injected by v8_compile.sh.
clang_use_chrome_plugins=false

# v8_enable_webassembly=true
v8_enable_i18n_support=false
v8_enable_temporal_support=false
v8_enable_test_features=false

v8_use_external_startup_data=false

symbol_level=0
strip_debug_info=true
treat_warnings_as_errors=false
use_custom_libcxx=false
use_custom_libcxx_for_host=false
